# linux-basic

./: .clang-format  .gitignore  CMakeLists.txt  README.md
section01/ex1/: main.c
section01/ex2/: main.c
section01/ex3/: main.c
section02/ex1/: main.c
section02/ex2/: main.c
section02/ex3/: main.c
section02/ex4/: main.c
section03/ex1/: main.c
section03/ex2/: main.c
section03/ex3/: main.c
